force-app/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>10</archiveRetentionYears>
        <description>All individual information. Hold for full 10 years.</description>
        <gracePeriodDays>1</gracePeriodDays>
    </historyRetentionPolicy>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>