force-app/main/default/objects/Contact/fields/Add_to_f9list_id__c.field-meta.xml
<CustomField>
    <fullName>Add_to_f9list_id__c</fullName>
    <description>Used to sync contacts to Five9</description>
    <label>Add to f9list id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>