force-app/main/default/objects/Contact/fields/Advisor_Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Annual_Recurring_Revenue__c</fullName>
    <description>Declarative rollup from associated contacts where role = &quot;Financial Advisor&quot;</description>
    <inlineHelpText>Sum of annual revenue from plans where this contact is an associated financial advisor</inlineHelpText>
    <label>Advisor - Annual Recurring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>