force-app/main/default/objects/Contact/fields/Advisor_Broker_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Broker_Dealer__c</fullName>
    <label>Advisor Broker Dealer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>