force-app/main/default/objects/Contact/fields/Advisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Email__c</fullName>
    <label>Advisor Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>