force-app/main/default/objects/Contact/fields/Advisor_Interest__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Interest__c</fullName>
    <label>Advisor Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attempting Contact</fullName>
                <default>true</default>
                <label>Attempting Contact</label>
            </value>
            <value>
                <fullName>Interested - Progressing</fullName>
            </value>
            <value>
                <fullName>Interested - No Current Client</fullName>
            </value>
            <value>
                <fullName>Interested - Dropped Off</fullName>
            </value>
            <value>
                <fullName>Actively Referring</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Just Testing</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>IW Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>