force-app/main/default/objects/Contact/fields/Advisor_Onboarding_Call__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Onboarding_Call__c</fullName>
    <inlineHelpText>Date and Time of advisor onboarding call</inlineHelpText>
    <label>Advisor Onboarding Call</label>
    <type>DateTime</type>
</CustomField>