force-app/main/default/objects/Contact/fields/Advisor_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Onboarding_Status__c</fullName>
    <inlineHelpText>Status of advisor onboarding. In order to be marked Complete, the advisor must have reviewed the onboarding process and toured the website</inlineHelpText>
    <label>Advisor Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Onboarding Complete</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>