force-app/main/default/objects/Contact/fields/Advisor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Phone__c</fullName>
    <label>Advisor Phone</label>
    <type>Phone</type>
</CustomField>