force-app/main/default/objects/Contact/fields/Advisory_Firm__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Firm__c</fullName>
    <label>Advisory Firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>