force-app/main/default/objects/Contact/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <formula>Owner.FirstName  + &quot; &quot; +  Owner.LastName</formula>
    <label>Assigned User</label>
    <type>Text</type>
</CustomField>