force-app/main/default/objects/Contact/fields/Associated_Active_Plans__c.field-meta.xml
<CustomField>
    <fullName>Associated_Active_Plans__c</fullName>
    <description>Calculated using declarative rollup summary.  Count of associated contacts on plans where status != inactive and role = financial advisor</description>
    <inlineHelpText>Count of plans that aren&apos;t inactive where this contact is an associated financial advisor</inlineHelpText>
    <label>Advisor - Active Plans</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>