force-app/main/default/objects/Contact/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ubiquity Retirement + Savings</fullName>
            </value>
            <value>
                <fullName>Simply Retirement</fullName>
            </value>
            <value>
                <fullName>Sallus Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>