force-app/main/default/objects/Contact/fields/Campaign_code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_code__c</fullName>
    <description>Carried over from converted lead&apos;s campaign</description>
    <label>Campaign code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>