force-app/main/default/objects/Contact/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <label>Company Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>