force-app/main/default/objects/Contact/fields/Conference_name__c.field-meta.xml
<CustomField>
    <fullName>Conference_name__c</fullName>
    <label>Conference name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adaptasoft User Conference - 2007</fullName>
            </value>
            <value>
                <fullName>Adaptasoft Users Conference 2006</fullName>
            </value>
            <value>
                <fullName>Alleghany Annual Meeting 2006</fullName>
            </value>
            <value>
                <fullName>APA - 2007</fullName>
            </value>
            <value>
                <fullName>ASPPA 401(k) Summit - 2005</fullName>
            </value>
            <value>
                <fullName>ASPPA 401(k) Summit - 2006</fullName>
            </value>
            <value>
                <fullName>ASPPA 401(k) Summit - 2007</fullName>
            </value>
            <value>
                <fullName>AZ Summer Business Expo - 2004</fullName>
            </value>
            <value>
                <fullName>CA CPA Conf (LA) - 2004</fullName>
            </value>
            <value>
                <fullName>CA Equity Capital - 2004</fullName>
            </value>
            <value>
                <fullName>Cambridge Advisors - 2007</fullName>
            </value>
            <value>
                <fullName>Cambridge Investment Advisors Conference 2006</fullName>
            </value>
            <value>
                <fullName>CA Solo &amp; Small Firm - 2004</fullName>
            </value>
            <value>
                <fullName>Center for Due Diligence - 2007</fullName>
            </value>
            <value>
                <fullName>CFDD - 2005</fullName>
            </value>
            <value>
                <fullName>CFDD Conference 2006</fullName>
            </value>
            <value>
                <fullName>Evolution User Group - 2007</fullName>
            </value>
            <value>
                <fullName>Execupay User Conference - 2006</fullName>
            </value>
            <value>
                <fullName>Execupay User Conference - 2007</fullName>
            </value>
            <value>
                <fullName>FPA Annual Conf - 2004</fullName>
            </value>
            <value>
                <fullName>FRA Retirement Summit - 2005</fullName>
            </value>
            <value>
                <fullName>High Tech - 2004</fullName>
            </value>
            <value>
                <fullName>IL CPA Business &amp; Technology  - 2004</fullName>
            </value>
            <value>
                <fullName>Investor&apos;s Capital Conference</fullName>
            </value>
            <value>
                <fullName>IPPA Annual Conf - 2004</fullName>
            </value>
            <value>
                <fullName>IPPA Annual Conf - 2005</fullName>
            </value>
            <value>
                <fullName>IPPA Annual Conference 2006</fullName>
            </value>
            <value>
                <fullName>IPPA Annual Conference - 2007</fullName>
            </value>
            <value>
                <fullName>IPPA Sales &amp; Marketing - 2005</fullName>
            </value>
            <value>
                <fullName>IPPA Sales &amp; Marketing - 2006</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>