force-app/main/default/objects/Contact/fields/Connected_Partner__c.field-meta.xml
<CustomField>
    <fullName>Connected_Partner__c</fullName>
    <description>References connected partner from account</description>
    <formula>TEXT(Account.Connected_Partner__c)</formula>
    <label>Connected Partner</label>
    <type>Text</type>
</CustomField>