force-app/main/default/objects/Contact/fields/Contact_ID_18_Char__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_18_Char__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID (18 Char)</label>
    <type>Text</type>
</CustomField>