force-app/main/default/objects/Contact/fields/Current_Active_Clients__c.field-meta.xml
<CustomField>
    <fullName>Current_Active_Clients__c</fullName>
    <label>Current Active Clients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>