force-app/main/default/objects/Contact/fields/Current_Client__c.field-meta.xml
<CustomField>
    <fullName>Current_Client__c</fullName>
    <label>Current Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>