force-app/main/default/objects/Contact/fields/delete_from_f9list_id__c.field-meta.xml
<CustomField>
    <fullName>delete_from_f9list_id__c</fullName>
    <description>Used to de-sync from Five9</description>
    <label>delete_from_f9list_id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>