force-app/main/default/objects/Contact/fields/Direct_Mail_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Direct_Mail_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when client does not wish to receive direct mail.</description>
    <inlineHelpText>Check when client does not wish to receive direct mail.</inlineHelpText>
    <label>Direct Mail Opt Out</label>
    <type>Checkbox</type>
</CustomField>