force-app/main/default/objects/Contact/fields/DO_NOT_USE__c.field-meta.xml
<CustomField>
    <fullName>DO_NOT_USE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DO NOT USE</label>
    <type>Checkbox</type>
</CustomField>