force-app/main/default/objects/Contact/fields/Electronic_Statement_Notice__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Statement_Notice__c</fullName>
    <description>Date the required electronic statement delivery notification was sent</description>
    <inlineHelpText>Date the required electronic statement delivery notification was sent</inlineHelpText>
    <label>Electronic Statement Notice</label>
    <type>Date</type>
</CustomField>