force-app/main/default/objects/Contact/fields/Employee_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email__c</fullName>
    <description>Used for Ubiquity Employee Email Addresses only</description>
    <inlineHelpText>Used for Ubiquity Employee Email Addresses only</inlineHelpText>
    <label>Employee Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>