force-app/main/default/objects/Contact/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <description>Is employee active or inactive?</description>
    <inlineHelpText>Is employee active or inactive?</inlineHelpText>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>