force-app/main/default/objects/Contact/fields/Estimated_Pay__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Pay__c</fullName>
    <label>Estimated Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>