force-app/main/default/objects/Contact/fields/Financial_Professional_Role__c.field-meta.xml
<CustomField>
    <fullName>Financial_Professional_Role__c</fullName>
    <description>This field has a corresponding field on Proposal. This field is updated via flow to match what is on the proposal. If you add/remove a value here, do the same for the Proposal field.</description>
    <label>Financial Professional Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RR</fullName>
            </value>
            <value>
                <fullName>IAR</fullName>
            </value>
            <value>
                <fullName>IA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>