force-app/main/default/objects/Contact/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>Full Name</description>
    <formula>FirstName +  &quot; &quot; + LastName</formula>
    <inlineHelpText>Full Name</inlineHelpText>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>