force-app/main/default/objects/Contact/fields/Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date__c</fullName>
    <description>Date employee was hired</description>
    <inlineHelpText>Date employee was hired</inlineHelpText>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>