force-app/main/default/objects/Contact/fields/Imp_Stage_Changed__c.field-meta.xml
<CustomField>
    <fullName>Imp_Stage_Changed__c</fullName>
    <label>Imp Stage Changed</label>
    <type>Date</type>
</CustomField>