force-app/main/default/objects/Contact/fields/Implementation_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Implementation_User_Name__c</fullName>
    <formula>Implementations_User__r.FirstName + &quot; &quot; +  Implementations_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation User Name</label>
    <type>Text</type>
</CustomField>