force-app/main/default/objects/Contact/fields/Implementations_User__c.field-meta.xml
<CustomField>
    <fullName>Implementations_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of Imp for email automation</description>
    <inlineHelpText>Owner of Imp for email automation</inlineHelpText>
    <label>Implementations User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>