force-app/main/default/objects/Contact/fields/Import_for_Oregon_State_Mandate__c.field-meta.xml
<CustomField>
    <fullName>Import_for_Oregon_State_Mandate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import for Oregon State Mandate</label>
    <type>Checkbox</type>
</CustomField>