force-app/main/default/objects/Contact/fields/Kotapay_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Survey_Link__c</fullName>
    <label>Kotapay Survey Link</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>