force-app/main/default/objects/Contact/fields/Last_Activity_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date_Range__c</fullName>
    <formula>IF(LastActivityDate &gt;= TODAY() - 180, &quot;Past 6 Months&quot;,
(IF(LastActivityDate &gt;= TODAY() - 365, &quot;Past 12 Months&quot;,
(IF(LastActivityDate &lt; TODAY() - 365, &quot;Over 12 Months&quot;, &quot;No Activity&quot;)))))</formula>
    <label>Last Activity Date Range</label>
    <type>Text</type>
</CustomField>