force-app/main/default/objects/Contact/fields/Last_Asked_for_a_Review_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Asked_for_a_Review_By__c</fullName>
    <description>Who last asked the contact to provide a review.</description>
    <inlineHelpText>Who last asked the contact to provide a review.</inlineHelpText>
    <label>Last Asked for a Review By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>