force-app/main/default/objects/Contact/fields/Last_Asked_for_Referral_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Asked_for_Referral_By__c</fullName>
    <description>Who last asked contact to provide a new plan referral?</description>
    <inlineHelpText>Who last asked contact to provide a new plan referral?</inlineHelpText>
    <label>Last Asked for Referral By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>