force-app/main/default/objects/Contact/fields/Last_Asked_for_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Asked_for_Referral_Date__c</fullName>
    <description>Date that contact was last asked to provide a new plan referral to Ubiquity.</description>
    <inlineHelpText>Date that contact was last asked to provide a new plan referral to Ubiquity.</inlineHelpText>
    <label>Last Asked for Referral Date</label>
    <type>Date</type>
</CustomField>