force-app/main/default/objects/Contact/fields/Last_Asked_for_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Asked_for_Review_Date__c</fullName>
    <description>Date the contact was last asked to provide a review.</description>
    <inlineHelpText>Date the contact was last asked to provide a review.</inlineHelpText>
    <label>Last Asked for Review Date</label>
    <type>Date</type>
</CustomField>