force-app/main/default/objects/Contact/fields/Last_Created_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Created_Survey_Date__c</fullName>
    <description>Last Date a Survey object was attached to the contact</description>
    <inlineHelpText>Last Date a Survey object was attached to the contact</inlineHelpText>
    <label>Last Created Survey Date</label>
    <type>Date</type>
</CustomField>