force-app/main/default/objects/Contact/fields/Last_CSAT_Reply__c.field-meta.xml
<CustomField>
    <fullName>Last_CSAT_Reply__c</fullName>
    <inlineHelpText>Date that the last CSAT Auto Reply went out for a CSAT score of 3 or less.</inlineHelpText>
    <label>Last CSAT Reply</label>
    <type>Date</type>
</CustomField>