force-app/main/default/objects/Contact/fields/Last_Simply_Proposal_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Simply_Proposal_Run__c</fullName>
    <label>Last Simply Proposal Run</label>
    <type>Date</type>
</CustomField>