force-app/main/default/objects/Contact/fields/Latest_Lead_Referred_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Lead_Referred_Date__c</fullName>
    <label>Latest Lead Referred Date</label>
    <type>Date</type>
</CustomField>