force-app/main/default/objects/Contact/fields/Lead_Nurture_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Lead_Nurture_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, contact will not be added to lead nurturing progam.</description>
    <inlineHelpText>Check this box if you do not want the contact included in the Intuit lead nurturing program.</inlineHelpText>
    <label>Lead Nurture Opt Out</label>
    <type>Checkbox</type>
</CustomField>