force-app/main/default/objects/Contact/fields/Lead_Origin__c.field-meta.xml
<CustomField>
    <fullName>Lead_Origin__c</fullName>
    <label>Lead Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ubiquity Generated</fullName>
            </value>
            <value>
                <fullName>Rep Generated</fullName>
            </value>
            <value>
                <fullName>Simply Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>