force-app/main/default/objects/Contact/fields/MC_Removal__c.field-meta.xml
<CustomField>
    <fullName>MC_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to delete contact from marketing cloud</description>
    <inlineHelpText>Check box to delete contact from marketing cloud</inlineHelpText>
    <label>MC Removal</label>
    <type>Checkbox</type>
</CustomField>