force-app/main/default/objects/Contact/fields/n2de__DE_Account_match_domain__c.field-meta.xml
<CustomField>
    <fullName>n2de__DE_Account_match_domain__c</fullName>
    <description>The domain extracted from the email address used by Lead-to-Account matching by domain</description>
    <label>DE Account Match Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>