force-app/main/default/objects/Contact/fields/Newsletter_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Client has opted out of quarterly client newsletter emails from Ubiquity.</description>
    <inlineHelpText>Client has opted out of quarterly client newsletter emails from Ubiquity.</inlineHelpText>
    <label>Newsletter Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>