force-app/main/default/objects/Contact/fields/NPN_Number__c.field-meta.xml
<CustomField>
    <fullName>NPN_Number__c</fullName>
    <externalId>true</externalId>
    <label>National Producer Number (NPN)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>