force-app/main/default/objects/Contact/fields/Offer_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Offer_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For contacts that should not receive offers but should receive Vitamin(k)</description>
    <label>Offer Opt Out</label>
    <type>Checkbox</type>
</CustomField>