force-app/main/default/objects/Contact/fields/Operational_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Operational_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operational Email Opt-Out</label>
    <type>Checkbox</type>
</CustomField>