force-app/main/default/objects/Contact/fields/Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Client has opted in to Marketing Campaigns</description>
    <inlineHelpText>Client has opted in to Marketing Campaigns</inlineHelpText>
    <label>Opt In</label>
    <type>Checkbox</type>
</CustomField>