force-app/main/default/objects/Contact/fields/Opt_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Reason__c</fullName>
    <label>Opt Out Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>