force-app/main/default/objects/Contact/fields/Pardot_Sender_Calendly_Link__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Sender_Calendly_Link__c</fullName>
    <label>Pardot Sender Calendly Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>