force-app/main/default/objects/Contact/fields/Pardot_Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Sender_Name__c</fullName>
    <label>Pardot Sender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>