force-app/main/default/objects/Contact/fields/Participant_Balance__c.field-meta.xml
<CustomField>
    <fullName>Participant_Balance__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Participant balance in Paradigm</description>
    <inlineHelpText>Participant balance in Paradigm</inlineHelpText>
    <label>Participant Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>