force-app/main/default/objects/Contact/fields/Partner_Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Client_Status__c</fullName>
    <description>No Clients = Partner &amp; Ubiquity have no mutual clients
Active Clients = Partner &amp; Ubiquity have mutual active client(s)
Past Clients = Partner &amp; Ubiquity have had mutual client(s) in the past</description>
    <inlineHelpText>No Clients = Partner &amp; Ubiquity have no mutual clients
Active Clients = Partner &amp; Ubiquity have mutual active client(s)
Past Clients = Partner &amp; Ubiquity have had mutual client(s) in the past</inlineHelpText>
    <label>Partner Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Clients</fullName>
                <default>true</default>
                <label>No Clients</label>
            </value>
            <value>
                <fullName>Active Client(s)</fullName>
            </value>
            <value>
                <fullName>Past Client(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>