force-app/main/default/objects/Contact/fields/Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Status__c</fullName>
    <description>Prospect = Evaluating partnership with Ubiquity. Active Referrer = Leads referred in the last 12 months. Past Referrer = Has referred leads 12 months ago or more.</description>
    <inlineHelpText>Prospect = Evaluating partnership with Ubiquity. Active Referrer = Leads referred in the last 12 months. Past Referrer = Has referred leads 12 months ago or more.</inlineHelpText>
    <label>Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Active Referrer</fullName>
            </value>
            <value>
                <fullName>Passive Referrer</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>